--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,4 +15,11 @@ html {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
   }
-  
+  .card-image-overlay{
+      position: relative;
+  }
+  .card-text{
+      background-color: blueviolet;
+      position: absolute;
+      bottom: 50px;
+  }
