Link a timed game template to the portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,5 +22,5 @@ html {
   .card-text{
       background-color: blueviolet;
       position: absolute;
-      bottom: 50px;
+      bottom: 20%;
   }
